# JSH_controller

./: .gitignore  CMakeLists.txt  package.xml
controller/: CMakeLists.txt  package.xml
controller/config/: params.yaml
controller/include/raisin_learning_controller/: HubodogController.hpp  hubodog_learning_controller.hpp  raibotController.hpp  raibot_learning_controller.hpp
controller/rsc/: actor_20000.txt  actor_29500.pt  actor_60000.txt  eout_mean20000.csv  eout_mean29500.csv  eout_mean60000.csv  eout_var20000.csv  eout_var29500.csv  eout_var60000.csv  estimator_20000.txt  estimator_29500.pt  estimator_60000.txt  mean30000.csv  obs_mean20000.csv  obs_mean29500.csv  obs_mean60000.csv  obs_var20000.csv  obs_var29500.csv  obs_var60000.csv  policy_30000.pt  var30000.csv
controller/src/raisin_learning_controller/: hubodog_learning_controller.cpp  raibot_learning_controller.cpp
gui/: README.md  mainpage.dox  package.xml  plugin.xml  setup.cfg  setup.py
gui/resource/: LearningControl.ui
gui/scripts/: rqt_raisin_lc
gui/src/rqt_raisin_lc/: learning_control.py
include/JSH_controller/: raibot_learning_controller.hpp
include/raisin_learning_controller/: HubodogController.hpp  hubodog_learning_controller.hpp
rsc/: mean20000.csv  mean30000.csv  policy_20000.pt  policy_30000.pt  var20000.csv  var30000.csv
src/JSH_controller/: raibot_learning_controller.cpp
src/raisin_learning_controller/: controller_test.cpp  hubodog_learning_controller.cpp
